Utils methods: Fixes, code-clean up and tests